# Touiouidth

./: CMakeLists.txt  README.md
include/: abstracttrigraph.hpp  bitsettrigraph.hpp  lowerbound.hpp  partition.hpp  solver.hpp  trigraph.hpp  util.hpp
src/: bitsettrigraph.cpp  lowerbound.cpp  partition.cpp  solver.cpp  trigraph.cpp  twwexact.cpp
